--- a/app/src/main/res/drawable/round_gray_bg.xml
+++ b/app/src/main/res/drawable/round_gray_bg.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/lightDividerBg"/>
     <corners android:radius="@dimen/sizeRoundCornerRadiusLayout"/>
-    <stroke
-        android:width="1dp"
-        android:color="@color/strongGray" />
+<!--    <stroke-->
+<!--        android:width="1dp"-->
+<!--        android:color="@color/strongGray" />-->
+    <padding android:bottom="2dp" android:top="2dp" android:left="8dp" android:right="8dp"/>
 </shape>
