--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
@@ -7,67 +7,18 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:orientation="vertical"
     tools:context=".ui.home.HomeActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/size_action_bar_height"
-        android:background="@drawable/action_bar_bg"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/searchImgView"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="?attr/selectableItemBackground"
-            android:padding="14dp"
-            android:src="@drawable/search"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/searchEditText"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:hint="@string/hint_search_friends_messages"
-            android:inputType="text"
-            android:textColor="@color/whiteText"
-            android:textColorHint="@color/weakWhiteText"
-            android:textSize="@dimen/sizeTextNormal"
-            app:layout_constraintEnd_toStartOf="@id/createGroupImgView"
-            app:layout_constraintStart_toEndOf="@id/searchImgView" />
-
-        <ImageView
-            android:id="@+id/createGroupImgView"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="?attr/selectableItemBackground"
-            android:padding="8dp"
-            android:src="@drawable/create_group"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toStartOf="@id/moreImgView" />
-
-        <ImageView
-            android:id="@+id/moreImgView"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="?attr/selectableItemBackground"
-            android:padding="8dp"
-            android:src="@drawable/add2"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toEndOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.viewpager.widget.ViewPager
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,4 +26,4 @@
         app:itemTextColor="@color/lightPrimary"
         app:menu="@menu/menu_navigation_home_activity" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
