--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -6,7 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.chat.ChatFragment">
 
+    <EditText
+        android:inputType="text"
+        android:paddingEnd="16dp"
+        android:paddingStart="44dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:textColor="@color/whiteText"
+        android:textColorHint="@color/whiteTransparent"
+        android:hint="@string/hint_search"
+        android:background="@drawable/action_bar_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/searchEditText"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"/>
+
+    <ImageView
+        android:layout_marginStart="4dp"
+        android:padding="10dp"
+        app:layout_constraintStart_toStartOf="@id/searchEditText"
+        app:layout_constraintBottom_toBottomOf="@id/searchEditText"
+        app:layout_constraintTop_toTopOf="@id/searchEditText"
+        android:src="@drawable/search"
+        app:layout_constraintDimensionRatio="H,1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="8dp"
         tools:listitem="@layout/item_room"
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
@@ -15,6 +43,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/searchEditText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
