--- a/app/src/main/res/layout/item_receive_room_activity.xml
+++ b/app/src/main/res/layout/item_receive_room_activity.xml
@@ -106,6 +106,7 @@
         app:layout_constraintTop_toBottomOf="@id/typingMessageLayout" />
 
     <include
+        app:layout_constraintWidth_min="@dimen/minMediaMessageWidth"
         layout="@layout/part_video_message"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -122,6 +123,7 @@
         tools:layout_width="200dp" />
 
     <include
+        app:layout_constraintWidth_min="@dimen/minMediaMessageWidth"
         layout="@layout/part_image_message"
         android:layout_width="0dp"
         android:layout_height="0dp"
