--- a/app/src/main/res/layout/item_send_room_activity.xml
+++ b/app/src/main/res/layout/item_send_room_activity.xml
@@ -78,6 +78,7 @@
         app:layout_constraintTop_toBottomOf="@id/fileMessageLayout" />
 
     <include
+        app:layout_constraintWidth_min="@dimen/minMediaMessageWidth"
         layout="@layout/part_video_message"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -95,6 +96,7 @@
 
     <include
         layout="@layout/part_image_message"
+        app:layout_constraintWidth_min="@dimen/minMediaMessageWidth"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="@dimen/size_margin_send_msg_item"
