--- a/app/src/main/res/layout/bottom_add_highlight_story.xml
+++ b/app/src/main/res/layout/bottom_add_highlight_story.xml
@@ -47,6 +47,7 @@
             app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:clipToPadding="false"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
