--- a/app/src/main/res/layout/fragment_edit_media.xml
+++ b/app/src/main/res/layout/fragment_edit_media.xml
@@ -9,12 +9,12 @@
     android:clipChildren="false">
 
     <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/playerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:surface_type="texture_view"
         app:use_controller="false"
-        android:id="@+id/playerView"
-        tools:foreground="@android:color/black"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        tools:foreground="@android:color/black" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -35,18 +35,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        tools:visibility="visible"
-        android:visibility="gone"
-        app:tint="@android:color/white"
         android:id="@+id/muteImgView"
         android:layout_width="56dp"
         android:layout_height="0dp"
         android:elevation="1dp"
         android:padding="17dp"
         android:src="@drawable/external_speaker"
+        android:visibility="gone"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@id/closeImgView"
-        app:layout_constraintTop_toBottomOf="@id/closeImgView" />
+        app:layout_constraintTop_toBottomOf="@id/closeImgView"
+        app:tint="@android:color/white"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/downloadImgView"
@@ -61,7 +61,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/emojiImgView"
+        android:id="@+id/reactImgView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="8dp"
@@ -79,7 +79,7 @@
         android:src="@drawable/ic_text"
         app:layout_constraintBottom_toBottomOf="@id/downloadImgView"
         app:layout_constraintDimensionRatio="W,1:1"
-        app:layout_constraintStart_toEndOf="@id/emojiImgView"
+        app:layout_constraintStart_toEndOf="@id/reactImgView"
         app:layout_constraintTop_toTopOf="@id/downloadImgView" />
 
     <ImageView
@@ -97,35 +97,45 @@
         android:id="@+id/sendImgView"
         android:layout_width="52dp"
         android:layout_height="0dp"
+        android:layout_margin="16dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/send_telegram"
-        android:layout_margin="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        app:civ_border_width="1dp"
-        app:civ_border_color="@android:color/white"
-        app:layout_constraintStart_toStartOf="@id/sendImgView"
-        android:layout_marginBottom="2dp"
         android:id="@+id/avatarImgView"
         android:layout_width="40dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="2dp"
+        app:civ_border_color="@android:color/white"
+        app:civ_border_width="1dp"
         app:layout_constraintBottom_toTopOf="@id/nameTextView"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@id/sendImgView"
+        app:layout_constraintStart_toStartOf="@id/sendImgView"
         tools:src="@drawable/official_account" />
 
     <TextView
-        android:textStyle="bold"
-        android:textSize="@dimen/sizeTextSmall"
         android:id="@+id/nameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:text="@string/description_your_story"
         android:textColor="@android:color/white"
+        android:textSize="@dimen/sizeTextSmall"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/sendImgView"
         app:layout_constraintEnd_toEndOf="@id/sendImgView" />
+
+    <Button
+        android:id="@+id/doneButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@drawable/follow_button_bg"
+        android:text="@string/label_done"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
