--- a/app/src/main/res/layout/item_diary.xml
+++ b/app/src/main/res/layout/item_diary.xml
@@ -12,8 +12,6 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@id/descTextView"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -52,138 +50,57 @@
         app:layout_constraintStart_toEndOf="@id/nameTextView" />
 
     <TextView
-        android:textSize="@dimen/sizeTextSmall"
         android:id="@+id/timeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="1dp"
+        android:textSize="@dimen/sizeTextSmall"
         app:layout_constraintBottom_toBottomOf="@id/nameTextView"
         app:layout_constraintEnd_toStartOf="@id/moreImgView"
         app:layout_constraintStart_toEndOf="@id/dot"
         tools:text="12 mins" />
 
     <ImageView
-        android:layout_marginEnd="4dp"
         android:id="@+id/moreImgView"
         android:layout_width="30dp"
         android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
+        android:layout_marginEnd="4dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="8dp"
         android:rotation="90"
         android:src="@drawable/more"
         app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/avatarImgView" />
 
     <vng.zalo.tdtai.zalo.widget.ExpandableTextView
         android:id="@+id/descTextView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginBottom="12dp"
         android:autoLink="web"
-        app:trimLength="500"
         android:textSize="@dimen/sizeTextBig"
-        app:layout_constraintBottom_toTopOf="@id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:autoSizeTextType="uniform"
         app:layout_constraintTop_toBottomOf="@id/avatarImgView"
-        tools:text="it's a beautiful day don't you think so you little piee of shit!!!\nokay it is" />
+        app:trimLength="500"
+        tools:text="it's a beautiful day" />
 
-    <ImageView
-        android:id="@+id/imageView"
+    <vng.zalo.tdtai.zalo.widget.MediaGridView
+        android:id="@+id/mediaGridView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/playerView"
-        app:layout_constraintDimensionRatio="1:1"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/descTextView"
-        tools:layout_height="100dp"
-        tools:src="@drawable/zalo"
-        tools:visibility="visible" />
+        tools:itemCount="2"
+        tools:listitem="@layout/item_media_video_preview" />
 
-    <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/playerView"
+    <include
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/emojiImgView"
-        app:layout_constraintHeight_max="500dp"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:surface_type="texture_view"
-        tools:layout_height="150dp"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/emojiImgView"
-        android:layout_width="38dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="4dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="8dp"
-        android:src="@drawable/heart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playerView" />
-
-    <ImageView
-        android:id="@+id/commentImgView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="8dp"
-        android:src="@drawable/comment"
-        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-        app:layout_constraintDimensionRatio="W,1:1"
-        app:layout_constraintEnd_toStartOf="@id/reactCountTextView"
-        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
-
-    <ImageView
-        android:id="@+id/shareImgView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="8dp"
-        android:src="@drawable/share2"
-        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-        app:layout_constraintDimensionRatio="W,1:1"
-        app:layout_constraintEnd_toStartOf="@id/commentNumTextView"
-        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
-
-    <TextView
-        android:id="@+id/shareNumTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_gray_bg"
-        app:layout_constraintBottom_toBottomOf="@id/shareImgView"
-        app:layout_constraintEnd_toStartOf="@id/shareImgView"
-        app:layout_constraintTop_toTopOf="@id/shareImgView"
-        tools:text="1.1k" />
-
-    <TextView
-        android:id="@+id/commentNumTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_gray_bg"
-        app:layout_constraintBottom_toBottomOf="@id/shareImgView"
-        app:layout_constraintEnd_toStartOf="@id/commentImgView"
-        app:layout_constraintTop_toTopOf="@id/shareImgView"
-        tools:text="1.1k" />
-
-    <TextView
-        android:id="@+id/reactCountTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_gray_bg"
-        app:layout_constraintBottom_toBottomOf="@id/shareImgView"
-        app:layout_constraintEnd_toStartOf="@id/emojiImgView"
-        app:layout_constraintTop_toTopOf="@id/shareImgView"
-        tools:text="1.1k" />
+        app:layout_constraintTop_toBottomOf="@id/mediaGridView"
+        layout="@layout/part_post_actions"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
