--- a/app/src/main/res/layout/item_watch.xml
+++ b/app/src/main/res/layout/item_watch.xml
@@ -24,6 +24,12 @@
         app:layout_constraintTop_toTopOf="@id/playerView"
         tools:src="@drawable/zalo" />
 
+    <View
+        android:background="@drawable/black_gradient_bg_bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"/>
+
     <ImageView
         android:id="@+id/playPauseImgView"
         android:layout_width="100dp"
@@ -60,13 +66,13 @@
         android:padding="4dp"
         android:src="@drawable/ic_add_black_24dp"
         app:civ_circle_background_color="@color/lightPrimary"
-        app:layout_constraintBottom_toTopOf="@id/emojiImgView"
+        app:layout_constraintBottom_toTopOf="@id/reactImgView"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@id/watchOwnerAvatarImgView"
         app:layout_constraintStart_toStartOf="@id/watchOwnerAvatarImgView" />
 
     <ImageView
-        android:id="@+id/emojiImgView"
+        android:id="@+id/reactImgView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/heart2"
@@ -92,14 +98,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/comment_black"
-        app:layout_constraintBottom_toTopOf="@id/commentNumTextView"
+        app:layout_constraintBottom_toTopOf="@id/commentCountTextView"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="@id/shareImgView"
         app:layout_constraintStart_toStartOf="@id/shareImgView"
         app:tint="@android:color/white" />
 
     <TextView
-        android:id="@+id/commentNumTextView"
+        android:id="@+id/commentCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="18dp"
@@ -117,14 +123,14 @@
         android:layout_marginStart="18dp"
         android:layout_marginEnd="10dp"
         android:src="@drawable/ic_share_black_24dp"
-        app:layout_constraintBottom_toTopOf="@id/shareNumTextView"
+        app:layout_constraintBottom_toTopOf="@id/shareCountTextView"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="@id/musicOwnerAvatarImgView"
         app:layout_constraintStart_toStartOf="@id/musicOwnerAvatarImgView"
         app:tint="@android:color/white" />
 
     <TextView
-        android:id="@+id/shareNumTextView"
+        android:id="@+id/shareCountTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
